--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h3 class="font-semibold text-xl mb-2">🏘️ Estates</h3>
         <ul class="text-left list-disc ml-4">
           <li>Tenant management</li>
-          <li>Rent payments</li>
+          <li>Quatation & payments</li>
           <li>Complaint logs</li>
         </ul>
       </div>
